fix : popup responsive issue on mobile

--- a/src/components/ui/popups/HolidayPopup.module.css
+++ b/src/components/ui/popups/HolidayPopup.module.css
@@ -22,6 +22,18 @@
 	text-align: center;
 	z-index: 9999;
 	position: relative;
+	animation: slideIn 1.75s ease-in-out;
+}
+
+@keyframes slideIn {
+	from {
+		opacity: 0;
+		transform: scale(0.8);
+	}
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
 
 .closeIcon {
